Apps/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome-service
  namespace: navidrome
spec:
  ports:
    - name: "4533"
      port: 80
      targetPort: 4533
  selector:
    app: navidrome
